update DEVSETUP and orcid-nodejs README